--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="https://i.postimg.cc/nrkFh6vn/recipe.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Recipe Generator</title>
+    <script data-ad-client="ca-pub-7651894620929613" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
